[package]
name = "am"
version = "0.0.1"
description = "Continuous Test"
repository = "https://github.com/basjoofan/am"
license = "MIT OR Apache-2.0"
authors = ["Lamb <lamb@basjoo.fan>"]
keywords = ["test", "continuous"]
edition = "2021"

[lib]
name = "am"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "am"
path = "src/main.rs"

[features]
default = ["command", "http"]
http = ["rustls", "webpki-roots", "form_urlencoded", "multipart"]
command = ["clap", "ctrlc"]

[dependencies]
form_urlencoded = { version = "1.2.1", optional = true }
multipart = { version = "0.18.0", optional = true, default-features = false, features = ["client"]  }
#uuid = { version = "1.8.0", features = ["v7"] }
regex = "1.11.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.23", optional = true, features = ["derive"] }
ctrlc = { version = "3.4.5", optional = true }
rustls = { version = "0.23.20", optional = true, default-features = false, features = ["tls12", "std", "ring"]  }
webpki-roots = { version = "0.26.7", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
avro = { version = "0.16", package = "apache-avro" }
