[workspace]
resolver = "2"
members = [
  "lib",
  "http",
  "cmd",
]

[workspace.package]
version = "0.1.2"
repository = "https://github.com/basjoofan/core"
license = "MIT OR Apache-2.0"
authors = ["Lamb <lamb@basjoofan.com>"]
keywords = ["continuous", "test", "http"]
edition = "2024"

[workspace.dependencies]
# cmd
lib = { path = "lib" }
http = { path = "http" }
clap = "4.6.1"
# lib
regex = "1.12.3"
uuid = { version = "1.23.2", default-features = false }
tokio = "1.52.3"
tokio-rustls = { version = "0.26.4", default-features = false }
rustls-platform-verifier = "0.7.0"
rand = { version = "0.10.1", default-features = false }
# dev
assert_fs = "1.1.4"
axum = "0.8.9"
serde_json = "1.0.150"
