[package]
name = "am-cli"
version = "0.0.1"
description = "Continuous Test"
repository = "https://github.com/basjoofan/am"
license = "MIT license"
authors = ["Lamb <lambgao@me.com>"]
keywords = ["test", "continuous"]
edition = "2021"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
am = { path = "../am" }
clap = { version = "4.5.7", features = ["derive"] }
humantime = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"