[package]
name = "am-http"
version = "0.0.1"
description = "http client"
repository = "https://github.com/basjoofan/am"
license = "MIT license"
authors = ["Lamb <lambgao@me.com>"]
keywords = ["test", "continuous"]
edition = "2021"

[dependencies]
rustls = { version = "0.23.11", default-features = false, features = ["tls12", "std", "ring"]  }
webpki-roots = "0.26.3"
url = "2.5.2"
form_urlencoded = "1.2.1"
multipart = { version = "0.18.0", default-features = false, features = ["client"]  }

[dev-dependencies]
