[package]
name = "am"
version = "0.0.1"
description = "Continuous Test"
repository = "https://github.com/basjoofan/am"
license = "MIT license"
authors = ["Lamb <lambgao@me.com>"]
keywords = ["test", "continuous"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["multipart", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "net", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.8.0", features = ["v7"] }
ctrlc = "3.4.4"
apache-avro = { version = "0.16", features = ["zstandard"] }

[dev-dependencies]
tokio-test = "*"