[package]
name = "am"
version = "0.0.1"
description = "Continuous Test"
repository = "https://github.com/basjoofan/am"
license = "MIT license"
authors = ["Lamb <lambgao@me.com>"]
keywords = ["test", "continuous"]
edition = "2021"

[dependencies]
http = { path = "../am-http", package = "am-http" }
uuid = { version = "1.8.0", features = ["v7"] }
ctrlc = "3.4.4"
avro = { version = "0.16", features = ["zstandard"], package = "apache-avro" }

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
