[package]
name = "cmd"
description = "basjoofan cmd"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
edition.workspace = true

[[bin]]
name = "basjoofan"
path = "src/main.rs"

[dependencies]
lib.workspace = true
http.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "sync", "io-std"] }

[dev-dependencies]
assert_fs.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "net"] }
axum.workspace = true
