[package]
name = "http"
description = "basjoofan HTTP transport"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
lib.workspace = true
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "fs"] }
tokio-rustls = { workspace = true, default-features = false, features = ["tls12", "ring"] }
rustls-platform-verifier.workspace = true
rand = { workspace = true, default-features = false, features = ["thread_rng"] }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
axum = { workspace = true, features = ["multipart"] }
