[package]
name = "lib"
version = "0.1.2"
description = "basjoofan library"
repository = "https://github.com/basjoofan/core"
license = "MIT OR Apache-2.0"
authors = ["Lamb <lamb@basjoofan.com>"]
keywords = ["continuous", "test", "http"]
edition = "2024"

[dependencies]
regex = "1.12.2"
#uuid = { version = "1.19.0", default-features = false, features = ["v7"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["net", "io-util", "time", "fs"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["tls12", "ring"] }
rustls-platform-verifier = "0.6.2"
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
js-sys = { version = "0.3.83" }
web-sys = { version = "0.3.83", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCache",
    "RequestRedirect",
    "AbortSignal",
    "Blob",
    "BlobPropertyBag",
    "FormData",
    "Response"
] }

[dev-dependencies]
serde_json = "1.0.145"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
axum = { version = "0.8.7", features = ["multipart"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.56"
web-sys = { version = "0.3.83", features = ["console"] }
