[package]
name = "lib"
description = "basjoofan lib"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
